--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divs maneiro</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>:)</h1>
 
-    <div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque unde temporibus sint aspernatur repudiandae hic recusandae possimus inventore beatae, eos tempora magni nobis iure repellendus, saepe dolorum expedita at officiis? </p>
+    <div class="div-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, sed delectus voluptatem sint id, quo excepturi hic quaerat deleniti expedita
+        rerum iusto, vel temporibus dignissimos dolor eius quae. 
+        Officiis, quia.
+    </div>
+
+    
+    <div class="div-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, sed delectus voluptatem sint id, quo excepturi hic quaerat deleniti expedita
+        rerum iusto, vel temporibus dignissimos dolor eius quae. 
+        Officiis, quia.
+    </div>
+
+
+    <div class="div-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, sed delectus voluptatem sint id, quo excepturi hic quaerat deleniti expedita
+        rerum iusto, vel temporibus dignissimos dolor eius quae. 
+        Officiis, quia.
+    </div>
+
+
+    <div class="div-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, sed delectus voluptatem sint id, quo excepturi hic quaerat deleniti expedita
+        rerum iusto, vel temporibus dignissimos dolor eius quae. 
+        Officiis, quia.
     </div>
 </body>
 </html>
